--- a/Sales Tracker/Base.lproj/LaunchScreen.storyboard
+++ b/Sales Tracker/Base.lproj/LaunchScreen.storyboard
@@ -17,13 +17,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H45-uj-1b6">
-                                <rect key="frame" x="76" y="309" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="H45-uj-1b6">
+                                <rect key="frame" x="76.666666666666686" y="306" width="240" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="Sqp-RG-fXa"/>
+                                    <constraint firstAttribute="height" constant="240" id="cou-jm-w3b"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="H45-uj-1b6" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="9Cs-xC-Mid"/>
+                            <constraint firstItem="H45-uj-1b6" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="MvE-NH-6xQ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -32,6 +39,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="LaunchScreen" width="500.66665649414062" height="438.33334350585938"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
