--- a/Sales Tracker/Presentation/Edit Quantity/View/EditQuantityView.xib
+++ b/Sales Tracker/Presentation/Edit Quantity/View/EditQuantityView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,6 +14,7 @@
                 <outlet property="_view" destination="iN0-l3-epB" id="tH4-6k-Wcu"/>
                 <outlet property="counterLabel" destination="XAZ-zb-oEv" id="nLh-Gi-jax"/>
                 <outlet property="editButton" destination="f6L-CR-shk" id="EgM-aT-V5G"/>
+                <outlet property="editButtonLabel" destination="RPg-K7-ZzQ" id="5ar-9B-uYG"/>
                 <outlet property="minusButton" destination="9Hf-kZ-XQC" id="0mo-uD-Jwp"/>
                 <outlet property="plusButton" destination="PJr-al-8Em" id="4Hd-g0-CB4"/>
                 <outlet property="slideIndicator" destination="MtJ-J4-BUV" id="eIE-6E-tJi"/>
@@ -33,10 +34,10 @@
                     </constraints>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="1Y7-m7-E9W">
-                    <rect key="frame" x="139.5" y="74" width="110" height="110"/>
+                    <rect key="frame" x="139.5" y="78" width="110" height="106"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Hf-kZ-XQC">
-                            <rect key="frame" x="0.0" y="0.0" width="18" height="110"/>
+                            <rect key="frame" x="0.0" y="0.0" width="18" height="106"/>
                             <color key="tintColor" red="0.38110625739999998" green="0.69713485239999995" blue="0.54975652689999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <state key="normal" image="minus" catalog="system">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -46,13 +47,13 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XAZ-zb-oEv">
-                            <rect key="frame" x="48" y="0.0" width="14" height="110"/>
+                            <rect key="frame" x="48" y="0.0" width="14" height="106"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                             <color key="textColor" red="0.30196078430000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PJr-al-8Em">
-                            <rect key="frame" x="92" y="0.0" width="18" height="110"/>
+                            <rect key="frame" x="92" y="0.0" width="18" height="106"/>
                             <color key="tintColor" red="0.38110625739999998" green="0.69713485239999995" blue="0.54975652689999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <state key="normal" image="plus" catalog="system">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -98,7 +99,7 @@
         </view>
     </objects>
     <resources>
-        <image name="minus" catalog="system" width="128" height="24"/>
+        <image name="minus" catalog="system" width="128" height="26"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
