--- a/Sales Tracker/Presentation/Edit Quantity/View/EditQuantityView.xib
+++ b/Sales Tracker/Presentation/Edit Quantity/View/EditQuantityView.xib
@@ -33,13 +33,13 @@
                         <constraint firstAttribute="width" constant="60" id="vde-Xp-8gM"/>
                     </constraints>
                 </view>
-                <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="1Y7-m7-E9W">
-                    <rect key="frame" x="139.5" y="78" width="110" height="106"/>
+                <stackView opaque="NO" contentMode="scaleToFill" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="1Y7-m7-E9W">
+                    <rect key="frame" x="109" y="78" width="171" height="106"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Hf-kZ-XQC">
-                            <rect key="frame" x="0.0" y="0.0" width="18" height="106"/>
+                            <rect key="frame" x="0.0" y="0.0" width="18.5" height="106"/>
                             <color key="tintColor" red="0.38110625739999998" green="0.69713485239999995" blue="0.54975652689999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                            <state key="normal" image="minus" catalog="system">
+                            <state key="normal" image="chevron.down" catalog="system">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
@@ -47,15 +47,15 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XAZ-zb-oEv">
-                            <rect key="frame" x="48" y="0.0" width="14" height="106"/>
+                            <rect key="frame" x="78.5" y="0.0" width="14" height="106"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                             <color key="textColor" red="0.30196078430000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PJr-al-8Em">
-                            <rect key="frame" x="92" y="0.0" width="18" height="106"/>
+                            <rect key="frame" x="152.5" y="0.0" width="18.5" height="106"/>
                             <color key="tintColor" red="0.38110625739999998" green="0.69713485239999995" blue="0.54975652689999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                            <state key="normal" image="plus" catalog="system">
+                            <state key="normal" image="chevron.up" catalog="system">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
                             <connections>
@@ -99,8 +99,8 @@
         </view>
     </objects>
     <resources>
-        <image name="minus" catalog="system" width="128" height="26"/>
-        <image name="plus" catalog="system" width="128" height="113"/>
+        <image name="chevron.down" catalog="system" width="128" height="70"/>
+        <image name="chevron.up" catalog="system" width="128" height="70"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
