--- a/Sales Tracker/Presentation/Settings/Cells/SettingsTableViewCell.xib
+++ b/Sales Tracker/Presentation/Settings/Cells/SettingsTableViewCell.xib
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,7 +16,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rectangle.portrait.and.arrow.right.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="n0M-YD-tXC">
-                        <rect key="frame" x="50" y="15" width="35" height="35"/>
+                        <rect key="frame" x="50" y="15.333333333333336" width="35" height="34.666666666666671"/>
                         <color key="tintColor" red="0.054649420079999997" green="0.13725990060000001" blue="0.085456676780000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="5Vb-V1-HBf"/>
@@ -47,7 +45,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="iconImaageView" destination="n0M-YD-tXC" id="U5r-b0-QyC"/>
+                <outlet property="iconImageView" destination="n0M-YD-tXC" id="U5r-b0-QyC"/>
                 <outlet property="title" destination="6KJ-4U-B0s" id="udY-sX-gXr"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="80.691964285714278"/>
