--- a/Sales Tracker/Presentation/Settings/View/SettingsView.xib
+++ b/Sales Tracker/Presentation/Settings/View/SettingsView.xib
@@ -14,6 +14,7 @@
                 <outlet property="_view" destination="iN0-l3-epB" id="VRz-g3-GyM"/>
                 <outlet property="backView" destination="VqE-90-R3O" id="0xT-xh-lq0"/>
                 <outlet property="tableView" destination="6bI-lq-YWp" id="wir-au-cpw"/>
+                <outlet property="title" destination="bke-uE-GkA" id="AJH-RO-k4h"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
