--- a/Sales Tracker/Presentation/Settings/Presenter/SettingsViewController.xib
+++ b/Sales Tracker/Presentation/Settings/Presenter/SettingsViewController.xib
@@ -1,22 +1,65 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsViewController" customModule="Sales_Tracker" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="backView" destination="fRB-cT-cXc" id="ULp-uX-8Y1"/>
+                <outlet property="tableView" destination="CxH-S0-bN0" id="lJK-BI-25H"/>
+                <outlet property="titleLabel" destination="uTx-XX-YyQ" id="STr-8d-ULl"/>
+                <outlet property="view" destination="Uuc-XC-chv" id="7dE-LR-TUx"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view contentMode="scaleToFill" id="Uuc-XC-chv">
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fRB-cT-cXc">
+                    <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="CxH-S0-bN0">
+                    <rect key="frame" x="0.0" y="131.66666666666669" width="393" height="686.33333333333326"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="設定" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uTx-XX-YyQ">
+                    <rect key="frame" x="50" y="79" width="293" height="32.666666666666657"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="27"/>
+                    <color key="textColor" red="0.054649420079999997" green="0.13725990060000001" blue="0.085456676780000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
+            <viewLayoutGuide key="safeArea" id="kkg-vF-7bp"/>
+            <color key="backgroundColor" red="0.054649420079999997" green="0.13725990060000001" blue="0.085456676780000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <constraints>
+                <constraint firstItem="CxH-S0-bN0" firstAttribute="leading" secondItem="kkg-vF-7bp" secondAttribute="leading" id="17T-Ue-sXl"/>
+                <constraint firstItem="kkg-vF-7bp" firstAttribute="trailing" secondItem="uTx-XX-YyQ" secondAttribute="trailing" constant="50" id="2Mb-Fg-5Fx"/>
+                <constraint firstItem="fRB-cT-cXc" firstAttribute="bottom" secondItem="kkg-vF-7bp" secondAttribute="bottom" id="JE3-ys-kVZ"/>
+                <constraint firstItem="kkg-vF-7bp" firstAttribute="trailing" secondItem="fRB-cT-cXc" secondAttribute="trailing" id="Kaf-i7-99P"/>
+                <constraint firstItem="uTx-XX-YyQ" firstAttribute="top" secondItem="kkg-vF-7bp" secondAttribute="top" constant="20" id="N9a-fX-Sv6"/>
+                <constraint firstItem="CxH-S0-bN0" firstAttribute="trailing" secondItem="kkg-vF-7bp" secondAttribute="trailing" id="OSL-Pn-I0Y"/>
+                <constraint firstItem="CxH-S0-bN0" firstAttribute="leading" secondItem="kkg-vF-7bp" secondAttribute="leading" id="PP9-ho-yjq"/>
+                <constraint firstItem="uTx-XX-YyQ" firstAttribute="leading" secondItem="kkg-vF-7bp" secondAttribute="leading" constant="50" id="ZZZ-rx-iuU"/>
+                <constraint firstItem="fRB-cT-cXc" firstAttribute="leading" secondItem="kkg-vF-7bp" secondAttribute="leading" id="oJu-x7-c4N"/>
+                <constraint firstItem="CxH-S0-bN0" firstAttribute="trailing" secondItem="kkg-vF-7bp" secondAttribute="trailing" id="qvU-GL-9or"/>
+                <constraint firstItem="CxH-S0-bN0" firstAttribute="bottom" secondItem="kkg-vF-7bp" secondAttribute="bottom" id="rxv-Fi-fmH"/>
+                <constraint firstItem="fRB-cT-cXc" firstAttribute="top" secondItem="kkg-vF-7bp" secondAttribute="top" id="yUQ-LJ-Nde"/>
+                <constraint firstItem="CxH-S0-bN0" firstAttribute="top" secondItem="uTx-XX-YyQ" secondAttribute="bottom" constant="20" id="z6T-ac-tXd"/>
+            </constraints>
+            <point key="canvasLocation" x="131.8840579710145" y="73.660714285714278"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
